--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
                 <form id="login-form">
                     <div class="form-group">
                         <label for="username">Username</label>
-                        <input type="text" class="form-control" id="username" required>
+                        <input type="text" class="form-control" id="usernameOrEmail" required>
                     </div>
                     <div class="form-group">
                         <label for="password">Password</label>
@@ -43,30 +43,32 @@
             </div>
         </div>
     </div>
-
+    <script src="scripts/auth.js"></script>
     <script>
         document.getElementById('login-form').addEventListener('submit', function(e) {
             e.preventDefault();
-            const username = document.getElementById('username').value;
+            const usernameOrEmail = document.getElementById('usernameOrEmail').value;
             const password = document.getElementById('password').value;
 
-            fetch('http://127.0.0.1:8000/api/user/login/', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ username, password }),
-            })
-            .then(response => response.json())
-            .then(data => {
-                console.log('Success:', data);
-                localStorage.setItem('access', data.access);
-                localStorage.setItem('refresh', data.refresh);
-                // Redirect or show success message
-            })
-            .catch((error) => {
-                console.error('Error:', error);
-            });
+            login(usernameOrEmail, password)
+            window.location.href = "index.html"
+        //     fetch('http://127.0.0.1:8000/api/user/login/', {
+        //         method: 'POST',
+        //         headers: {
+        //             'Content-Type': 'application/json',
+        //         },
+        //         body: JSON.stringify({ username, password }),
+        //     })
+        //     .then(response => response.json())
+        //     .then(data => {
+        //         console.log('Success:', data);
+        //         localStorage.setItem('access', data.access);
+        //         localStorage.setItem('refresh', data.refresh);
+        //         // Redirect or show success message
+        //     })
+        //     .catch((error) => {
+        //         console.error('Error:', error);
+        //     });
         });
     </script>
 </body>
