--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
             color: white;
         }
     </style>
+    <link rel="stylesheet" href="styles/hidden.css">
+    <script>
+        
+    </script>
 </head>
 <body>
     <!-- Navbar -->
@@ -40,7 +44,7 @@
                     <a class="nav-link" href="#">Explore <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Problems</a>
+                    <a class="nav-link" href="problems.html">Problems</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contest</a>
@@ -55,7 +59,7 @@
                     <a class="nav-link" href="#">Store</a>
                 </li>
             </ul>
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav ml-auto" id="authPages">
                 <li class="nav-item">
                     <a class="nav-link" href="login.html">Login</a>
                 </li>
@@ -63,6 +67,7 @@
                     <a class="nav-link" href="register.html">Register</a>
                 </li>
             </ul>
+            
         </div>
     </nav>
 
@@ -139,5 +144,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="scripts/check_auth.js"></script>
+
 </body>
 </html>
