fix headers and create: create_problem create_testcase load_testcases profile solution top_users Pages mb need to fix login and register

--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
                     <a class="nav-link" href="problems.html">Problems</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contest</a>
+                    <a class="nav-link" href="create_problem.html">Create problem</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Discuss</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Interview</a>
+                    <a class="nav-link" href="top_users.html">Top</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Store</a>
+                    <a class="nav-link" href="profile.html">Profile</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto" id="authPages">
