--- a/login.html
+++ b/login.html
@@ -11,14 +11,23 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="index.html">LeetCode Clone</a>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="login.html">Login</a>
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Explore <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="register.html">Register</a>
+                    <a class="nav-link" href="problems.html">Problems</a>
                 </li>
-                <li class="nav-item d-none" id="profile-link">
+                <li class="nav-item">
+                    <a class="nav-link" href="create_problem.html">Create problem</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Discuss</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="top_users.html">Top</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="profile.html">Profile</a>
                 </li>
             </ul>
@@ -52,23 +61,23 @@
 
             login(usernameOrEmail, password)
             window.location.href = "index.html"
-        //     fetch('http://127.0.0.1:8000/api/user/login/', {
-        //         method: 'POST',
-        //         headers: {
-        //             'Content-Type': 'application/json',
-        //         },
-        //         body: JSON.stringify({ username, password }),
-        //     })
-        //     .then(response => response.json())
-        //     .then(data => {
-        //         console.log('Success:', data);
-        //         localStorage.setItem('access', data.access);
-        //         localStorage.setItem('refresh', data.refresh);
-        //         // Redirect or show success message
-        //     })
-        //     .catch((error) => {
-        //         console.error('Error:', error);
-        //     });
+            fetch('http://localhost:8000/api/auth/login/', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ username, password }),
+            })
+            .then(response => response.json())
+            .then(data => {
+                console.log('Success:', data);
+                localStorage.setItem('accessToken', data.access);
+                localStorage.setItem('refresh', data.refresh);
+                // Redirect or show success message
+            })
+            .catch((error) => {
+                console.error('Error:', error);
+            });
         });
     </script>
 </body>
