--- a/register.html
+++ b/register.html
@@ -55,7 +55,7 @@
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
 
-            fetch('http://127.0.0.1:8000/api/user/register/', {
+            fetch('http://localhost:8000/api/auth/register/', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
