--- a/load_testcases.html
+++ b/load_testcases.html
@@ -82,12 +82,14 @@
         </form>
         <div id="uploadResult" class="mt-3"></div>
         <div class="mt-3">
-            <h2>Example file</h2>
+            <h2>Examples</h2>
             <ul>
                 <li>qwerty|ytrewq</li>
                 <li>[1,2,3,4];4|[1,2,3]</li>
                 <li>someString;s|ometring</li>
                 <li>[1,2,3];4|[1,2,3];[1,2,3];[1,2,3];[1,2,3]</li>
+                <li>['dog','racecar','car']|<b>''</b></li>
+                <li>[20,1,3,5,6,8,2];21[0,1]</li>
             </ul>
         </div>
     </div>
