--- a/create_problem.html
+++ b/create_problem.html
@@ -96,6 +96,9 @@
         <ul class="nav flex-column">
             <li class="nav-item">
                 <a class="nav-link" href="load_testcases.html">Load Testcases</a>
+            </li> 
+            <li class="nav-item">
+                <a class="nav-link" href="create_testcase.html">Load Testcases</a>
             </li>
         </ul>
     </div>
