--- a/create_problem.html
+++ b/create_problem.html
@@ -98,7 +98,7 @@
                 <a class="nav-link" href="load_testcases.html">Load Testcases</a>
             </li> 
             <li class="nav-item">
-                <a class="nav-link" href="create_testcase.html">Load Testcases</a>
+                <a class="nav-link" href="create_testcase.html">Create testcase</a>
             </li>
         </ul>
     </div>
