update login problem detail notif

--- a/profile.html
+++ b/profile.html
@@ -96,7 +96,7 @@
         <hr>
         <h5>Languages</h5>
         <div id="languages">
-            <span class="badge badge-secondary">Python3</span> 48 problems solved
+            <span class="badge badge-secondary">Python3</span> int problems solved
         </div>
     </div>
 
