--- a/login.html
+++ b/login.html
@@ -58,26 +58,27 @@
             e.preventDefault();
             const usernameOrEmail = document.getElementById('usernameOrEmail').value;
             const password = document.getElementById('password').value;
-
             login(usernameOrEmail, password)
-            window.location.href = "index.html"
-            fetch('http://localhost:8000/api/auth/login/', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ username, password }),
-            })
-            .then(response => response.json())
-            .then(data => {
-                console.log('Success:', data);
+            async function login(usernameOrEmail, password) {
+                const response = await fetch('http://localhost:8000/api/auth/login/', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        username_or_email: usernameOrEmail,
+                        password: password
+                    })
+                });
+
+                if (!response.ok) {
+                    throw new Error('Login failed');
+                }
+
+                const data = await response.json();
                 localStorage.setItem('accessToken', data.access);
-                localStorage.setItem('refresh', data.refresh);
-                // Redirect or show success message
-            })
-            .catch((error) => {
-                console.error('Error:', error);
-            });
+                localStorage.setItem('refreshToken', data.refresh);
+            }
         });
     </script>
 </body>
