--- a/problem_details.html
+++ b/problem_details.html
@@ -109,11 +109,25 @@
         .disabled {
             opacity: 0.5;
         }
+        .alert-popup {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            z-index: 1050;
+            display: none;
+        }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ace.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/mode-python.js"></script>
 </head>
 <body>
+    <!-- Message -->
+    <div class="alert alert-success alert-dismissible fade show alert-popup" role="alert">
+        <strong>Success!</strong> This solution was save.
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html">LeetCode Analogue</a>
@@ -348,7 +362,7 @@
                 },
                 body: JSON.stringify({
                     problem: problemId,
-                    user: userId, // Replace with actual user ID
+                    user: userId,
                     lead_time: result.lead_time_total_milliseconds,
                     memory_used: 20.04,
                     user_code: editor.getValue(),
@@ -359,7 +373,13 @@
                 if (!response.ok) {
                     throw new Error('Network response was not ok');
                 }
-                return response.text(); // Use .text() instead of .json()
+                var alertElement = document.querySelector('.alert-popup');
+                alertElement.style.display = 'block';
+
+                setTimeout(function() {
+                    $(alertElement).alert('close');
+                }, 5000);
+                return response.text();
             })
             .then(saveData => {
                 if (saveData) {
